2004-08-14  Carl Worth  <cworth@isi.edu>

	* autogen.sh (LANG): Explicitly set LANG=C to fix the awk
	string->number conversion for user with locales that don't match
	ASCII digit conventions.

2004-08-03  Carl Worth  <cworth@isi.edu>

	* src/cairo_gstate.c (extract_transformed_rectangle): Temporarily
	disable rectangle-based clipping optimization as it's not working
	(see cairo_snippets/xxx_clip_rectangle for a test case).

2004-08-02  Carl Worth  <cworth@isi.edu>

	* COPYING:
	* src/cairo-features.h.in:
	* src/cairo.c:
	* src/cairo.h:
	* src/cairo_color.c:
	* src/cairo_fixed.c:
	* src/cairo_font.c:
	* src/cairo_gstate.c:
	* src/cairo_hull.c:
	* src/cairo_image_surface.c:
	* src/cairo_matrix.c:
	* src/cairo_path.c:
	* src/cairo_path_bounds.c:
	* src/cairo_path_fill.c:
	* src/cairo_path_stroke.c:
	* src/cairo_pen.c:
	* src/cairo_polygon.c:
	* src/cairo_ps_surface.c:
	* src/cairo_slope.c:
	* src/cairo_spline.c:
	* src/cairo_surface.c:
	* src/cairo_xcb_surface.c:
	* src/cairo_xlib_surface.c:
	* src/cairoint.h: Change from MIT license to LGPL.
	Fix to explicitly refer to GNU Lesser Public License 2.1 rather
	than the Library Public License version 2 or "any later version"

	* src/cairo_pattern.c: 
	* src/cairo_gl_surface.c: Fix copyright attributions mistakenly
	attributed to University of Southern California rather than to
	David Reveman.

	* BUGS: Note that cairo_clip is fixed now.

2004-08-01  Øyvind Kolås  <oeyvindk@hig.no>

	* src/cairo.h: replaced ct with cr in public headers to keep
	usage consistent.

2004-07-24  Jamey Sharp <jamey@minilop.net>

	* src/cairo_xcb_surface.c:
	Updating for XCB API change around iterators.

2004-07-20  David Reveman  <c99drn@cs.umu.se>

	* src/cairo_gl_surface.c (_cairo_gl_surface_get_image): Use new 
	pixel buffer interface.
	(_cairo_gl_surface_set_image): Use new pixel buffer interface.
	(_cairo_gl_surface_set_filter): Don't use convolution filter for
	gaussian filter type as we have no software fall-back.